--- a/translations/kangyur/translations/062-005_toh205-the_city_beggar_woman.xml
+++ b/translations/kangyur/translations/062-005_toh205-the_city_beggar_woman.xml
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-062-005-204">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -165,6 +165,9 @@
                 <change who="#john" when="2024-05-30T12:53:35.194Z" type="text-version" status="1.0.2" xml:id="UT22084-062-005-210">
                     <desc>Edited first line of 1.17 and associated note.</desc>
                 </change>
+                <change who="#andre" when="2024-06-08T10:57:28.071Z" type="text-version" status="1.0.3" xml:id="UT22084-062-005-211">
+                    <desc>Glossary integration in CG revised and activated, notes and entry on city beggar compiled</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -239,14 +242,14 @@
                     <milestone unit="chunk" xml:id="UT22084-062-005-78"/>
                     <p tid="11">The different versions of the story all tell of a pauper woman who
                         is “dependent on the city for her livelihood” (Skt.
-                            <distinct>nagarāvalambikā</distinct>).<note place="end" xml:id="UT22084-062-005-79"> Skilling 2021, pp. 301–4, includes a
+                            <distinct>nagarāvalambikā</distinct>).<note place="end" xml:id="UT22084-062-005-79">See “city beggar woman.” <!--Skilling 2021, pp. 301–4, includes a
                             detailed discussion of this Sanskrit term and notes that different
                             Tibetan translations of it include the following: <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" type="quote">grong khyer gyis ’tsho ba</tei:foreign>
                             (“one who is supported by the city,” which is the Tibetan translation
                             found in this sūtra), <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" type="quote">grong
                                 khyer rten pa</tei:foreign> (“city dependent”), <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" type="quote">grong khyer gyi sprang po</tei:foreign>
                             (“city beggar”), and <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" type="quote">grong gi
-                                sprang po </tei:foreign>(also “city beggar”).</note> In all versions,
+                                sprang po </tei:foreign>(also “city beggar”).--></note> In all versions,
                         this woman lights an oil lamp at Jeta Grove that cannot be extinguished due
                         to her great determination of mind in vowing to become a buddha. While
                         sharing this basic plot and some other narrative details, such as a disciple
@@ -337,10 +340,10 @@
                         area for four leagues around was illuminated by their flames. </p>
                     <milestone unit="chunk" xml:id="UT22084-062-005-96"/>
                     <p tid="26">At the same time, in the great city of Śrāvastī, there was a city
-                            beggar woman<note place="end" xml:id="UT22084-062-005-97"> Tib. <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" type="quote">grong khyer gyis ’tsho ba
+                            beggar woman<!--<note place="end" xml:id="UT22084-062-005-97"> Tib. <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" type="quote">grong khyer gyis ’tsho ba
                                 zhig</tei:foreign>, lit. “one whose livelihood is from the city.” This
-                                is a Tibetan rendering of the Sanskrit <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Sa-Ltn" type="quote">nagarāvalambikā</tei:foreign>, as discussed above in <ptr target="#UT22084-062-005-79"/><!--note 5-->
-                            to the Introduction, and at greater length in Skilling 2021. </note>
+                                is a Tibetan rendering of the Sanskrit <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Sa-Ltn" type="quote">nagarāvalambikā</tei:foreign>, as discussed above in <ptr target="#UT22084-062-005-79"/>
+                            to the Introduction, and at greater length in Skilling 2021. </note>-->
                         called Maker of Joy.<note place="end" xml:id="UT22084-062-005-98"> Tib.
                                 <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" type="quote">dga’ byed ma zhes bya
                                 ba</tei:foreign>. Skilling suggests Nandikā as a possible equivalent for
@@ -610,7 +613,7 @@
                 </div>
                 
             </div>
-            <div type="glossary" status="excluded">
+            <div type="glossary">
                 <list type="glossary">
 
                     <item>
@@ -619,9 +622,19 @@
                             <term xml:lang="Bo-Ltn" status="verified" n="1">grong khyer gyis ’tsho ba </term>
                             <term xml:lang="bo" n="1">གྲོང་ཁྱེར་གྱིས་འཚོ་བ།</term>
                             <term xml:lang="Sa-Ltn" status="verified" type="attestedDictionary">nagarāvalambikā</term>
-                            <note type="definition">
-                                <p>A person dependent on the city for alms, or a
+                        <note type="definition">
+                                <p>Lit. “one whose livelihood is from the city.” This
+                            is a Tibetan rendering of the Sanskrit <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Sa-Ltn" type="quote">nagarāvalambikā</tei:foreign>, referring to a person dependent on the city for alms, or a
                                     beggar.</p>
+                            <p>(Skilling 2021, pp. 301–4, includes a
+                                detailed discussion of this Sanskrit term and notes that different
+                                Tibetan translations of it include the following: <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" type="quote">grong khyer gyis ’tsho ba</tei:foreign>
+                                (“one who is supported by the city,” which is the Tibetan translation
+                                found in this sūtra), <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" type="quote">grong
+                                    khyer rten pa</tei:foreign> (“city dependent”), <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" type="quote">grong khyer gyi sprang po</tei:foreign>
+                                (“city beggar”), and <tei:foreign xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" type="quote">grong gi
+                                    sprang po </tei:foreign>(also “city beggar”).)</p>
+                            
                             </note>
                         </gloss>
                     </item>
@@ -826,7 +839,7 @@
                             <note type="definition">
                                 <p/>
                             </note>
-                            <term type="translationAlternative">thus gone</term>
+                            <term type="translationAlternative">thus-gone</term>
                         </gloss>
                     </item>
                     <item>
