--- a/translations/kangyur/placeholders/063-005_toh224-the_sutra_of_the_chapter_about_sthiradhyasa__drdhadhyasaya.xml
+++ b/translations/kangyur/placeholders/063-005_toh224-the_sutra_of_the_chapter_about_sthiradhyasa__drdhadhyasaya.xml
@@ -18,11 +18,11 @@
                 <editor role="copyEditor" xml:id="UT22084-063-005-27">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-063-005"/>
                 <date/>
             </publicationStmt>
@@ -85,6 +85,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-05T10:09:32.466Z" type="text-version" status="0.0.11" xml:id="UT22084-063-005-30">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-10T08:33:55.936Z" type="translation-status" status="2.b" xml:id="UT22084-063-005-31">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-10T08:33:55.936Z" type="text-version" status="0.0.12" xml:id="UT22084-063-005-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
