--- a/translations/kangyur/placeholders/072-018_toh318-the_dharma_discourse_on_the_vast_meaning.xml
+++ b/translations/kangyur/placeholders/072-018_toh318-the_dharma_discourse_on_the_vast_meaning.xml
@@ -17,13 +17,14 @@
                 <editor role="proofreader" xml:id="UT22084-072-018-6">Amber Moore</editor>
                 <consultant role="advisor" xml:id="UT22084-072-018-7">C. Rocco Cheng</consultant>
                 <editor role="projectEditor" xml:id="UT22084-072-018-27">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-072-018-41">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-072-018"/>
                 <date/>
             </publicationStmt>
@@ -89,6 +90,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-31T11:23:03.622Z" type="text-version" status="0.0.12" xml:id="UT22084-072-018-32">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-31T11:23:40.747Z" type="text-version" status="0.0.13" xml:id="UT22084-072-018-42">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-10T10:15:48.584Z" type="translation-status" status="2.d" xml:id="UT22084-072-018-43">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-10T10:15:48.584Z" type="text-version" status="0.0.14" xml:id="UT22084-072-018-44">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
