--- a/translations/kangyur/placeholders/041-002_toh57-the_teaching_to_nanda_on_entering_the_womb.xml
+++ b/translations/kangyur/placeholders/041-002_toh57-the_teaching_to_nanda_on_entering_the_womb.xml
@@ -10,17 +10,18 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryanandagarbhāvakrāntinirdeśa</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dga' bo mngal du 'jug pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《為阿難說處胎經》（大正藏：《大寶積經佛說入胎藏會第十四》）</title>
-                <author role="translatorMain" xml:id="UT22084-041-002-1"/>
+                <author role="translatorMain" xml:id="UT22084-041-002-1">Robert Kritzer</author>
                 <author role="translatorEng" xml:id="UT22084-041-002-2">Robert Kritzer</author>
+                <editor role="projectEditor" xml:id="UT22084-041-002-20">Nathaniel Rich</editor>
                 <sponsor xml:id="UT22084-041-002-3">Make Wang Xiao Juan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-041-002"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +78,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-29T13:25:37.757Z" type="text-version" status="0.0.12" xml:id="UT22084-041-002-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-29T13:26:13.151Z" type="text-version" status="0.0.13" xml:id="UT22084-041-002-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-11T09:16:07.585Z" type="translation-status" status="2.f" xml:id="UT22084-041-002-22">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-11T09:16:07.585Z" type="text-version" status="0.0.14" xml:id="UT22084-041-002-23">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
