--- a/translations/kangyur/translations/062-005_toh205-the_city_beggar_woman.xml
+++ b/translations/kangyur/translations/062-005_toh205-the_city_beggar_woman.xml
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-062-005-204">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -167,6 +167,9 @@
                 </change>
                 <change who="#andre" when="2024-06-08T10:57:28.071Z" type="text-version" status="1.0.3" xml:id="UT22084-062-005-211">
                     <desc>Glossary integration in CG revised and activated, notes and entry on city beggar compiled</desc>
+                </change>
+                <change who="#andre" when="2024-06-11T09:57:27.069Z" type="text-version" status="1.0.4" xml:id="UT22084-062-005-212">
+                    <desc>Translation of dge 'dun changed from "community of followers" to just "community"</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -388,7 +391,7 @@
                         courtyard, she made this wish:</p>
                     <milestone unit="chunk" xml:id="UT22084-062-005-100"/>
                     <p tid="27">“Blessed One, with this root of virtue, may I too become a teacher
-                        in the future. May I teach the Dharma and have a community of followers,
+                        in the future. May I teach the Dharma and gather a community,
                         just as the thus-gone, worthy, perfect, and complete Buddha does now. If I
                         am to become a buddha in the future, may this oil lamp continue to burn
                         until I return.” Whereupon she lit the lamp, and returned to the city.</p>
@@ -871,7 +874,7 @@
                     </item>
                     <item>
                         <gloss type="term" xml:id="UT22084-062-005-156">
-                            <term type="translationMain">community of followers</term>
+                            <term type="translationMain">community</term>
                             <term xml:lang="Bo-Ltn" status="verified" n="1">dge ’dun </term>
                             <term xml:lang="bo" n="1">དགེ་འདུན།</term>
                             <term xml:lang="Sa-Ltn" status="verified" type="attestedDictionary">saṅgha</term>
