--- a/translations/kangyur/translations/062-008_toh208-the_great_rumble.xml
+++ b/translations/kangyur/translations/062-008_toh208-the_great_rumble.xml
@@ -33,7 +33,7 @@
                                         Rich</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.7 <date>2023</date>
+                <edition>v 1.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -211,6 +211,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-23T21:08:00.984Z" type="text-version" status="1.0.7" xml:id="UT22084-062-008-137">
                     <desc>updated ellipsis.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-06-11T13:27:34.7Z" type="text-version" status="1.0.8" xml:id="UT22084-062-008-138">
+                    <desc>updated milestone 1.2.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -393,10 +396,7 @@
                                                   <foreign xml:lang="Sa-Ltn">badara</foreign>.</note> Between these two, whose
                                                 merit would increase the most?”</p>
                                         <milestone unit="chunk" xml:id="UT22084-062-008-18"/>
-                                        <p tid="24">Returning from his alms round in Śrāvastī, the
-                                                venerable Ānanda ate his food. When he was finished,
-                                                he discarded the leftovers, put away his alms bowl
-                                                and robes, and washed his feet. He then went before
+                                        <p tid="24">Returning from his alms round in Śrāvastī, the venerable Ānanda ate his food. As he was abstaining from any subsequent food, he put away his alms bowl and robes, and washed his feet. He then went before
                                                 the Blessed One, bowed his head at his feet, and sat
                                                 to one side.</p>
                                         <milestone unit="chunk" xml:id="UT22084-062-008-19"/>
@@ -797,7 +797,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">śrāvaka</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">nyan thos</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཉན་ཐོས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A “listener” or direct
                                                   disciple of the Buddha. Often used to denote the
                                                   non-Mahāyāna monastic community.</p>
@@ -824,7 +824,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">trisāhasra­mahā­sāhasra­loka­dhātu</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">stong gsum gyi stong chen po’i ’jig rten gyi khams</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྟོང་གསུམ་གྱི་སྟོང་ཆེན་པོའི་འཇིག་རྟེན་གྱི་ཁམས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The largest universe
                                                   spoken of in Buddhist cosmology, consisting of one
                                                   billion worlds.</p>
@@ -859,7 +859,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">anāthapiṇḍada</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mgon med zas sbyin</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">མགོན་མེད་ཟས་སྦྱིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A principal benefactor of
                                                   the Buddha; he was the wealthy banker from
                                                   Śrāvastī who acquired the grove of Prince Jeta,
