--- a/translations/kangyur/placeholders/035-019_toh44-19-chapter_19_the_verses_of_the_assembly_of_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/035-019_toh44-19-chapter_19_the_verses_of_the_assembly_of_bodhisattvas.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" xml:id="UT22084-035-019-6">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-035-019"/>
             </publicationStmt>
             <sourceDesc>
@@ -50,6 +50,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T14:29:51.479Z" type="text-version" status="0.0.5" xml:id="UT22084-035-019-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-11T14:22:47.767Z" type="translation-status" status="2.g" xml:id="UT22084-035-019-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-11T14:22:47.767Z" type="text-version" status="0.0.6" xml:id="UT22084-035-019-11">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
