--- a/translations/kangyur/translations/058-005_toh156-the_questions_of_the_naga_king_anavatapta.xml
+++ b/translations/kangyur/translations/058-005_toh156-the_questions_of_the_naga_king_anavatapta.xml
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-058-005-7">Tian Pujun</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -178,6 +178,9 @@
                 </change>
                 <change who="#sameer" when="2024-05-14T15:39:24.524Z" type="text-version" status="1.0.3" xml:id="UT22084-058-005-1640">
                     <desc>Included in App v 3.14</desc>
+                </change>
+                <change who="#celso" when="2024-06-11T14:30:11.216Z" type="text-version" status="1.0.4" xml:id="UT22084-058-005-1641">
+                    <desc>corrected typo in glossary</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -6633,7 +6636,7 @@
                         <gloss type="place" xml:id="UT22084-058-005-854">
                             <term type="translationMain">Jambudvīpa</term>
                             <term xml:lang="Bo-Ltn" status="verified" n="1">’dzam bu gling</term>
-                            <term xml:lang="bo" n="1">ཛམ་བུ་གླིང་།</term>
+                            <term xml:lang="bo" n="1" status="verified">འཛམ་བུ་གླིང་།</term>
                             <term xml:lang="zh"/>
                             <term xml:lang="Sa-Ltn" type="attestedDictionary">jambudvīpa</term>
                         </gloss>
