--- a/translations/kangyur/translations/091-062_toh665,1084-ganapatis_heart_mantra.xml
+++ b/translations/kangyur/translations/091-062_toh665,1084-ganapatis_heart_mantra.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-062-167">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2023</date>
+                <edition>v 1.1.0 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -83,7 +83,7 @@
                                         <biblScope>Degé Kangyur, vol. 101 (gzungs ’dus, wam), folios
                                                 251.a–252.a</biblScope>
                                         <location work="UT4CZ5369" count-pages="3">
-                                                <volume number="101" start-page="501" end-page="503"/>
+                                                <volume number="102" start-page="501" end-page="503"/>
                                         </location>
                                         <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                                         <idno source-id="O1JC114941JC12848" work="W22084"/>
@@ -196,6 +196,9 @@
                 <change who="#sameer" when="2023-12-27T15:23:04.657Z" type="text-version" status="1.0.4" xml:id="UT22084-091-062-175">
                     <desc>Included in App v 3.9</desc>
                 </change>
+                <change who="#celso" when="2024-06-12T14:27:35.67Z" type="text-version" status="1.1.0" xml:id="UT22084-091-062-177">
+                    <desc>corrected eKangyur alingment (1084), added explanatory note</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -288,7 +291,39 @@
                                                   Duquenne 1988, pp. 321–54. </note>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-062-67"/>
-                                        <p tid="13">In the Degé Kangyur this text appears in both the Tantra Collection (<title xml:lang="Bo-Ltn">rgyud ’bum</title>, Toh 665) and the Compendium of Dhāraṇīs (<title xml:lang="Bo-Ltn">gzungs ’dus</title>, Toh 1084). 
+                                        <p tid="13">In the Degé Kangyur this text appears in both the Tantra Collection (<title xml:lang="Bo-Ltn">rgyud ’bum</title>, Toh 665) and the Compendium of Dhāraṇīs (<title xml:lang="Bo-Ltn">gzungs ’dus</title>, Toh 1084).<note place="end" xml:id="UT22084-091-062-176">
+                                                <p key="toh1084">This text, Toh 1084, and all
+                                                        those contained in this same volume (<foreign xml:lang="Bo-Ltn">gzungs, wam</foreign>), are
+                                                        listed as being located in volume 101 of the Degé
+                                                        Kangyur by the Buddhist Digital Resource Center
+                                                        (BDRC). However, several other Kangyur
+                                                        databases—including the eKangyur that supplies the
+                                                        digital input version displayed by the 84000
+                                                        Reading Room—list this work as being located in
+                                                        volume 102. This discrepancy is partly due to the
+                                                        fact that the two volumes of the <foreign xml:lang="Bo-Ltn">gzungs ’dus</foreign> section
+                                                        are an added supplement not mentioned in the
+                                                        original catalog, and also hinges on the fact that
+                                                        the compilers of the Tōhoku catalog placed another
+                                                        text—which forms a whole, very large volume—the
+                                                        <title xml:lang="Sa-Ltn">Vimala­prabhā­nāma­kālacakra­tantra­ṭīkā</title>
+                                                        (<title xml:lang="Bo-Ltn">dus ’khor ’grel bshad
+                                                                dri med ’od</title>, Toh 845), before the volume
+                                                        100 of the Degé Kangyur, numbering it as vol. 100,
+                                                        although it is almost certainly intended to come
+                                                        right at the end of the Degé Kangyur texts as
+                                                        volume 102; indeed its final fifth chapter is
+                                                        often carried over and wrapped in the same volume
+                                                        as the Kangyur <foreign xml:lang="Bo-Ltn">dkar
+                                                                chags</foreign> (catalog). Please note this
+                                                        discrepancy when using the eKangyur viewer in this
+                                                        translation.</p>
+                                                <p key="toh665">Note that there is a discrepancy
+                                                        among various databases for cataloging the Toh
+                                                        1084 version of this text within vol. 101 or 102
+                                                        of the Degé Kangyur. See Toh 1084, 
+                                                        <ptr target="toh1084.html#UT22084-091-062-176"/>, for details.</p>
+                                        </note> 
                                                 This translation is based on both
                                                 witnesses of <title xml:lang="en">The Heart Mantra of Gaṇapati</title> preserved in the Degé Kangyur in
                                                 consultation with the Comparative Edition (<title xml:lang="Bo-Ltn">dpe bsdur ma</title>) and the
