--- a/translations/kangyur/translations/055-002_toh128-appearing_differently_to_all_while_not_departing_emptiness.xml
+++ b/translations/kangyur/translations/055-002_toh128-appearing_differently_to_all_while_not_departing_emptiness.xml
@@ -27,8 +27,8 @@
                     mdo</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">chos nyid rang gi ngo bo nyid las mi g.yo
                     bar tha dad par thams cad snang ba’i mdo</title>
-                <author role="translatorMain" xml:id="UT22084-055-002-1">Sakya Pandita Translation
-                    Group</author>
+                <author role="translatorMain" xml:id="UT22084-055-002-1"/><!--Sakya Pandita Translation
+                    Group-->
                 <consultant role="dharmaMaster" xml:id="UT22084-055-002-2">Khenpo Kalsang
                     Gyaltsen</consultant>
                 <consultant role="projectManager" xml:id="UT22084-055-002-3">Ani Kunga
@@ -45,7 +45,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-055-002-298">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -216,6 +216,9 @@
                 </change>
                 <change who="#andre" when="2024-06-12T20:23:47.283Z" type="text-version" status="1.0.0" xml:id="UT22084-055-002-301">
                     <desc>First published version</desc>
+                </change>
+                <change who="#andre" when="2024-06-12T20:31:36.417Z" type="text-version" status="1.0.1" xml:id="UT22084-055-002-302">
+                    <desc>Minor fix to the TEI header</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
