--- a/translations/kangyur/translations/055-002_toh128-appearing_differently_to_all_while_not_departing_emptiness.xml
+++ b/translations/kangyur/translations/055-002_toh128-appearing_differently_to_all_while_not_departing_emptiness.xml
@@ -45,7 +45,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-055-002-298">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -220,6 +220,9 @@
                 <change who="#andre" when="2024-06-12T20:31:36.417Z" type="text-version" status="1.0.1" xml:id="UT22084-055-002-302">
                     <desc>Minor fix to the TEI header</desc>
                 </change>
+                <change who="#konchog" when="2024-06-13T14:07:41.92Z" type="text-version" status="1.0.2" xml:id="UT22084-055-002-303">
+                    <desc>Several minor fixes in the intro and notes.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -333,7 +336,7 @@
                     <p tid="72">As will be outlined below, the provenance of this sūtra is somewhat
                         uncertain. This is noted by both Tibetan Kangyur scholars Chomden Raltri
                         (1227–1305) and Butön Rinchen Drub (1290-1364) and, in recent times,
-                        Herrmann-Pfandt (2008, pp. 147-148) and Li (2021, p. 203).</p>
+                        Herrmann-Pfandt (2008, pp. 147–48) and Li (2021, p. 203).</p>
                     <milestone unit="chunk" xml:id="UT22084-055-002-250"/>
                     <p tid="73">In short, the complications arise from the fact that the Denkarma
                         catalog, which was compiled in the early ninth century <hi rend="small-caps">ce</hi>, includes a text it classifies as having been translated from
@@ -344,10 +347,10 @@
                             <emph>is</emph> evidence that the text existed in India in the eleventh
                         century, since it is cited (though without a title) in a commentary
                         translated into Tibetan that is attributed to Avadhūtipa, better known as
-                        Maitrīpa (c. 1007–85).<note place="end" xml:id="UT22084-055-002-252">
+                        Maitrīpa (ca. 1007–85).<note place="end" xml:id="UT22084-055-002-252">
                             Avadhūtipa, folios 215.a–215.b. The author makes no mention of the
                             title, saying simply “the sūtra,” which he cites as the scriptural
-                            authority for a statement about non-dual <term rend="ignore">wisdom</term> made in a Yogācāra text
+                            authority for a statement about nondual <term rend="ignore">wisdom</term> made in a Yogācāra text
                             that invokes scriptural authority and reasoning as its basis.</note> The
                         sūtra is also mentioned by name in a treatise by Atīśa Dīpaṃkaraśrījñāna
                         (982–1054), likewise extant only in Tibetan translation.<note place="end" xml:id="UT22084-055-002-253"> Atīśa Dīpaṃkaraśrījñāna, folio 284.a. The
@@ -378,8 +381,8 @@
                     <milestone unit="chunk" xml:id="UT22084-055-002-256"/>
                     <p tid="74">Its disappearance cannot have lasted long, however, because a
                         younger scholar in the next generation of Butön’s <term rend="ignore">lineage</term>, the important Prajñāpāramitā specialist Yaktön Sangyé
-                        Pal (<foreign xml:lang="Bo-Ltn" type="term">g.yag ston sangs rgyas
-                            dpal</foreign>, 1350–1414), includes the entire sūtra verbatim, with
+                        Pal (g.yag ston sangs rgyas
+                            dpal, 1350–1414), includes the entire sūtra verbatim, with
                         intercalated comments of his own, in his commentary on the <title xml:lang="Sa-Ltn">Abhisamayālaṃkāra</title>.<note place="end" xml:id="UT22084-055-002-257"> The version of the sūtra that Yaktön cites
                             (pp. 90–106), apart from some minor differences in punctuation and two
                             brief passages in transposed order, is the same Tibetan translation as
@@ -440,7 +443,7 @@
                         editorial interventions had already begun in the ninth century and
                         continued, until the period after Chomden Raltri and Butön, up until the end
                         of the fourteenth century.<note place="end" xml:id="UT22084-055-002-262"> On
-                            this topic, see Almogi 2008, especially pp. 115-8. See also Skilling
+                            this topic, see Almogi 2008, especially pp. 115–18. See also Skilling
                             1994.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-055-002-263"/>
@@ -572,20 +575,20 @@
                             classicus</foreign> of how a range of views should be (and later were)
                         categorized into a doxography.</p>
                     <milestone unit="chunk" xml:id="UT22084-055-002-275"/>
-                    <p tid="86">This approach is taken most directly by Amé Zhab (<foreign xml:lang="Bo-Ltn" type="term">a myes zhabs ngag dbang kun dga’ bsod
-                            nams</foreign>, 1597–1659) in a long commentary on the <title xml:lang="Sa-Ltn">Kālacakratantra</title>. He specifically equates the
+                    <p tid="86">This approach is taken most directly by Amé Zhab (a myes zhabs ngag dbang kun dga’ bsod
+                            nams, 1597–1659) in a long commentary on the <title xml:lang="Sa-Ltn">Kālacakratantra</title>. He specifically equates the
                         five “analytic positions” in the sūtra with the philosophical positions
                         respectively of (1) the Vaibhāṣika and Sautrāntika (<foreign xml:lang="Bo-Ltn" type="term">don smra ba gnyis</foreign>), (2) the
                         Cittamatra (<foreign xml:lang="Bo-Ltn" type="term">sems tsam</foreign>), (3)
                         the general Madhyamaka (<foreign xml:lang="Bo-Ltn" type="term">dbu ma
                             spyi</foreign>), (4) the “illusion-like” Madhyamaka (<foreign xml:lang="Bo-Ltn" type="term">dbu ma sgyu ma lta bu</foreign>), and (5)
-                        the “non-abiding” Madhyamaka (<foreign xml:lang="Bo-Ltn" type="term">dbu ma
+                        the “nonabiding” Madhyamaka (<foreign xml:lang="Bo-Ltn" type="term">dbu ma
                             rab tu mi gnas pa</foreign>). However, he also makes the important
                         distinction between, on the one hand, these views arising in the minds of
                         individuals as they are here recorded as having done in the sūtra and, on
                         the other, their being adopted as views belonging to collective schools of
                         thought. He reinforces his argument by citing instances in other sūtras and
-                        tantras featuring the terminology of these views: the <title xml:lang="Sa-Ltn">Laṅkāvatārasūtra</title> (Toh 107), <title xml:lang="Sa-Ltn">Sumaghadāvadāna</title> (Toh 346), <title xml:lang="Sa-Ltn">Hevajratantra</title> (Toh 417–8), <title xml:lang="Sa-Ltn">Ḍākārṇava</title> (Toh 372), and others.<note place="end" xml:id="UT22084-055-002-276"> The sūtra is mentioned in Amé
+                        tantras featuring the terminology of these views: the <title xml:lang="Sa-Ltn">Laṅkāvatārasūtra</title> (Toh 107), <title xml:lang="Sa-Ltn">Sumaghadāvadāna</title> (Toh 346), <title xml:lang="Sa-Ltn">Hevajratantra</title> (Toh 417–418), <title xml:lang="Sa-Ltn">Ḍākārṇava</title> (Toh 372), and others.<note place="end" xml:id="UT22084-055-002-276"> The sūtra is mentioned in Amé
                             Zhab, folio 55.b–56.a, but with several preceding folios of relevant
                             discussion and the other citations mentioned. </note>
                     </p>
