--- a/translations/kangyur/translations/055-002_toh128-appearing_differently_to_all_while_not_departing_emptiness.xml
+++ b/translations/kangyur/translations/055-002_toh128-appearing_differently_to_all_while_not_departing_emptiness.xml
@@ -45,7 +45,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-055-002-298">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -223,6 +223,9 @@
                 <change who="#konchog" when="2024-06-13T14:07:41.92Z" type="text-version" status="1.0.2" xml:id="UT22084-055-002-303">
                     <desc>Several minor fixes in the intro and notes.</desc>
                 </change>
+                <change who="#andre" when="2024-06-13T14:27:47.645Z" type="text-version" status="1.0.3" xml:id="UT22084-055-002-304">
+                    <desc>Minor fix to a note link.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -391,7 +394,7 @@
                             and the <foreign xml:lang="Bo-Ltn" type="term">la don</foreign> after
                                 <foreign xml:lang="Bo-Ltn" type="term">thams cad</foreign> is
                             present in both the initial title and the colophon title; the phrase for
-                            the five views (see note xx) is that of the Themphangma Kangyurs; and
+                            the five views (see <ptr target="#UT22084-055-002-138"/>) is that of the Themphangma Kangyurs; and
                             the translators’ colophon attributing the text to Dānaśīla and Yeshé Dé
                             is present but without the editorial note mentioning Dānaśīlā’s comment.
                         </note> Yaktön was quoting it soon after the first appearance of a complete
