--- a/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
+++ b/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
@@ -11,15 +11,16 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryāṣṭadevidhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryāṣṭadevīdhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo brgyad kyi gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-087-002-1"/>
+                <author role="translatorMain" xml:id="UT22084-087-002-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-087-002-2">Adam Krug</author>
+                <editor role="projectEditor" xml:id="UT22084-087-002-13">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-087-002"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +68,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-12T07:43:48.255Z" type="text-version" status="0.0.5" xml:id="UT22084-087-002-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-12T07:44:16.661Z" type="text-version" status="0.0.6" xml:id="UT22084-087-002-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:21:07.422Z" type="translation-status" status="2.f" xml:id="UT22084-087-002-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:21:07.422Z" type="text-version" status="0.0.7" xml:id="UT22084-087-002-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
