--- a/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
+++ b/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-087-002-13">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-087-002"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +77,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-14T12:21:07.422Z" type="text-version" status="0.0.7" xml:id="UT22084-087-002-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:25:43.501Z" type="translation-status" status="2.e" xml:id="UT22084-087-002-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:25:43.501Z" type="text-version" status="0.0.8" xml:id="UT22084-087-002-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
