--- a/translations/kangyur/placeholders/035-020_toh44-20-chapter_20_the_ten_categories_of_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/035-020_toh44-20-chapter_20_the_ten_categories_of_bodhisattvas.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" xml:id="UT22084-035-020-7">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-035-020"/>
             </publicationStmt>
             <sourceDesc>
@@ -53,6 +53,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T14:22:10.415Z" type="text-version" status="0.0.7" xml:id="UT22084-035-020-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:52:55.754Z" type="translation-status" status="2.g" xml:id="UT22084-035-020-11">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:52:55.754Z" type="text-version" status="0.0.8" xml:id="UT22084-035-020-12">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
