--- a/translations/kangyur/placeholders/035-021_toh44-21-chapter_21_pure_conduct.xml
+++ b/translations/kangyur/placeholders/035-021_toh44-21-chapter_21_pure_conduct.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" xml:id="UT22084-035-021-6">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-035-021"/>
             </publicationStmt>
             <sourceDesc>
@@ -50,6 +50,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T14:13:55.381Z" type="text-version" status="0.0.5" xml:id="UT22084-035-021-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:53:59.871Z" type="translation-status" status="2.g" xml:id="UT22084-035-021-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:53:59.871Z" type="text-version" status="0.0.6" xml:id="UT22084-035-021-11">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
