--- a/translations/kangyur/placeholders/093-009_toh694-the_incantation_the_essence_of_the_spell_of_elevenfaced_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-009_toh694-the_incantation_the_essence_of_the_spell_of_elevenfaced_avalokitesvara.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-093-009-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-093-009"/>
             </publicationStmt>
             <sourceDesc>
@@ -48,6 +48,12 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:05:44.008Z" type="text-version" status="0.0.1" xml:id="UT22084-093-009-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-17T13:58:54.524Z" type="translation-status" status="2.h" xml:id="UT22084-093-009-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-17T13:58:54.524Z" type="text-version" status="0.0.2" xml:id="UT22084-093-009-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
