--- a/translations/kangyur/placeholders/093-010_toh695,911-the_essence_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-010_toh695,911-the_essence_of_avalokitesvara.xml
@@ -12,11 +12,11 @@
                 <author role="translatorEng" xml:id="UT22084-093-010-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-093-010"/>
             </publicationStmt>
             <sourceDesc>
@@ -59,6 +59,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:22:51.39Z" type="text-version" status="0.0.2" xml:id="UT22084-093-010-8">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-17T14:00:42.971Z" type="translation-status" status="2.h" xml:id="UT22084-093-010-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-17T14:00:42.971Z" type="text-version" status="0.0.3" xml:id="UT22084-093-010-10">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
