--- a/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-093-020-9">Catherine Dalton</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-093-020"/>
                 <date/>
             </publicationStmt>
@@ -69,6 +69,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:11:18.584Z" type="text-version" status="0.0.6" xml:id="UT22084-093-020-11">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-17T14:06:13.117Z" type="translation-status" status="2.h" xml:id="UT22084-093-020-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-17T14:06:13.117Z" type="text-version" status="0.0.7" xml:id="UT22084-093-020-13">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
