--- a/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-093-021-9">Catherine Dalton</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-093-021"/>
                 <date/>
             </publicationStmt>
@@ -57,6 +57,12 @@
                 </change>
                 <change who="#line-tofte" when="2023-10-03T14:27:18.945Z" type="text-version" status="0.0.5" xml:id="UT22084-093-021-10">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-17T14:07:28.589Z" type="translation-status" status="2.h" xml:id="UT22084-093-021-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-17T14:07:28.589Z" type="text-version" status="0.0.6" xml:id="UT22084-093-021-12">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
