--- a/translations/kangyur/placeholders/034-011_toh23-the_perfection_of_wisdom_mother_in_one_syllable.xml
+++ b/translations/kangyur/placeholders/034-011_toh23-the_perfection_of_wisdom_mother_in_one_syllable.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-034-011-5">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-034-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -50,6 +50,12 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:02:12.257Z" type="text-version" status="0.0.1" xml:id="UT22084-034-011-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-18T07:49:45.229Z" type="translation-status" status="2.h" xml:id="UT22084-034-011-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-18T07:49:45.229Z" type="text-version" status="0.0.2" xml:id="UT22084-034-011-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
